Etoile.Lite.Parser/src/Grammar/Generated/ArcaeaAffChartParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ArcaeaAffChart.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace ArcCreate.ChartFormat.Grammar {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class ArcaeaAffChartParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, Whitespace=8, 
		LParen=9, RParen=10, LBrack=11, RBrack=12, LBrace=13, RBrace=14, LChev=15, 
		RChev=16, Comma=17, Semicolon=18, Colon=19, Equal=20, Underline=21, Space=22, 
		Plus=23, Minus=24, Multiply=25, Divide=26, Mod=27, Pow=28, Word=29, Int=30, 
		Float=31;
	public const int
		RULE_chart = 0, RULE_eventTiming = 1, RULE_eventTap = 2, RULE_eventHold = 3, 
		RULE_eventArc = 4, RULE_eventArcTap = 5, RULE_eventCamera = 6, RULE_eventScenecontrol = 7, 
		RULE_eventTimingGroup = 8, RULE_event = 9, RULE_item = 10, RULE_subEvents = 11, 
		RULE_segment = 12, RULE_header = 13, RULE_body = 14;
	public static readonly string[] ruleNames = {
		"chart", "eventTiming", "eventTap", "eventHold", "eventArc", "eventArcTap", 
		"eventCamera", "eventScenecontrol", "eventTimingGroup", "event", "item", 
		"subEvents", "segment", "header", "body"
	};

	private static readonly string[] _LiteralNames = {
		null, "'timing'", "'hold'", "'arc'", "'arctap'", "'camera'", "'scenecontrol'", 
		"'timinggroup'", null, "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", 
		"'>'", "','", "';'", "':'", "'='", "'_'", "' '", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'^'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, "Whitespace", "LParen", 
		"RParen", "LBrack", "RBrack", "LBrace", "RBrace", "LChev", "RChev", "Comma", 
		"Semicolon", "Colon", "Equal", "Underline", "Space", "Plus", "Minus", 
		"Multiply", "Divide", "Mod", "Pow", "Word", "Int", "Float"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ArcaeaAffChart.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ArcaeaAffChartParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ArcaeaAffChartParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ArcaeaAffChartParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ChartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Minus() { return GetToken(ArcaeaAffChartParser.Minus, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BodyContext body() {
			return GetRuleContext<BodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ArcaeaAffChartParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public HeaderContext[] header() {
			return GetRuleContexts<HeaderContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HeaderContext header(int i) {
			return GetRuleContext<HeaderContext>(i);
		}
		public ChartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chart; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.EnterChart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.ExitChart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcaeaAffChartVisitor<TResult> typedVisitor = visitor as IArcaeaAffChartVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChartContext chart() {
		ChartContext _localctx = new ChartContext(Context, State);
		EnterRule(_localctx, 0, RULE_chart);
		int _la;
		try {
			State = 42;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Word:
				EnterOuterAlt(_localctx, 1);
				{
				State = 31;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 30;
					header();
					}
					}
					State = 33;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==Word );
				State = 35;
				Match(Minus);
				State = 36;
				body();
				State = 37;
				Match(Eof);
				}
				break;
			case Eof:
			case T__0:
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
			case LParen:
				EnterOuterAlt(_localctx, 2);
				{
				State = 39;
				body();
				State = 40;
				Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventTimingContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LParen() { return GetToken(ArcaeaAffChartParser.LParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RParen() { return GetToken(ArcaeaAffChartParser.RParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Int() { return GetToken(ArcaeaAffChartParser.Int, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(ArcaeaAffChartParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(ArcaeaAffChartParser.Comma, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Float() { return GetTokens(ArcaeaAffChartParser.Float); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Float(int i) {
			return GetToken(ArcaeaAffChartParser.Float, i);
		}
		public EventTimingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eventTiming; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.EnterEventTiming(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.ExitEventTiming(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcaeaAffChartVisitor<TResult> typedVisitor = visitor as IArcaeaAffChartVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEventTiming(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EventTimingContext eventTiming() {
		EventTimingContext _localctx = new EventTimingContext(Context, State);
		EnterRule(_localctx, 2, RULE_eventTiming);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44;
			Match(T__0);
			State = 45;
			Match(LParen);
			{
			State = 46;
			Match(Int);
			State = 47;
			Match(Comma);
			}
			{
			State = 49;
			Match(Float);
			State = 50;
			Match(Comma);
			}
			{
			State = 52;
			Match(Float);
			}
			State = 53;
			Match(RParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventTapContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LParen() { return GetToken(ArcaeaAffChartParser.LParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RParen() { return GetToken(ArcaeaAffChartParser.RParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Int() { return GetTokens(ArcaeaAffChartParser.Int); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Int(int i) {
			return GetToken(ArcaeaAffChartParser.Int, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Float() { return GetToken(ArcaeaAffChartParser.Float, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma() { return GetToken(ArcaeaAffChartParser.Comma, 0); }
		public EventTapContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eventTap; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.EnterEventTap(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.ExitEventTap(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcaeaAffChartVisitor<TResult> typedVisitor = visitor as IArcaeaAffChartVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEventTap(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EventTapContext eventTap() {
		EventTapContext _localctx = new EventTapContext(Context, State);
		EnterRule(_localctx, 4, RULE_eventTap);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			Match(LParen);
			{
			State = 56;
			Match(Int);
			State = 57;
			Match(Comma);
			}
			State = 59;
			_la = TokenStream.LA(1);
			if ( !(_la==Int || _la==Float) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 60;
			Match(RParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventHoldContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LParen() { return GetToken(ArcaeaAffChartParser.LParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RParen() { return GetToken(ArcaeaAffChartParser.RParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Int() { return GetTokens(ArcaeaAffChartParser.Int); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Int(int i) {
			return GetToken(ArcaeaAffChartParser.Int, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Float() { return GetToken(ArcaeaAffChartParser.Float, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(ArcaeaAffChartParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(ArcaeaAffChartParser.Comma, i);
		}
		public EventHoldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eventHold; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.EnterEventHold(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.ExitEventHold(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcaeaAffChartVisitor<TResult> typedVisitor = visitor as IArcaeaAffChartVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEventHold(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EventHoldContext eventHold() {
		EventHoldContext _localctx = new EventHoldContext(Context, State);
		EnterRule(_localctx, 6, RULE_eventHold);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			Match(T__1);
			State = 63;
			Match(LParen);
			{
			State = 64;
			Match(Int);
			State = 65;
			Match(Comma);
			}
			{
			State = 67;
			Match(Int);
			State = 68;
			Match(Comma);
			}
			State = 70;
			_la = TokenStream.LA(1);
			if ( !(_la==Int || _la==Float) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 71;
			Match(RParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventArcContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LParen() { return GetToken(ArcaeaAffChartParser.LParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RParen() { return GetToken(ArcaeaAffChartParser.RParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Int() { return GetTokens(ArcaeaAffChartParser.Int); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Int(int i) {
			return GetToken(ArcaeaAffChartParser.Int, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(ArcaeaAffChartParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(ArcaeaAffChartParser.Comma, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Float() { return GetTokens(ArcaeaAffChartParser.Float); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Float(int i) {
			return GetToken(ArcaeaAffChartParser.Float, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Word() { return GetTokens(ArcaeaAffChartParser.Word); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Word(int i) {
			return GetToken(ArcaeaAffChartParser.Word, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SubEventsContext subEvents() {
			return GetRuleContext<SubEventsContext>(0);
		}
		public EventArcContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eventArc; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.EnterEventArc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.ExitEventArc(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcaeaAffChartVisitor<TResult> typedVisitor = visitor as IArcaeaAffChartVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEventArc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EventArcContext eventArc() {
		EventArcContext _localctx = new EventArcContext(Context, State);
		EnterRule(_localctx, 8, RULE_eventArc);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73;
			Match(T__2);
			State = 74;
			Match(LParen);
			{
			State = 75;
			Match(Int);
			State = 76;
			Match(Comma);
			}
			{
			State = 78;
			Match(Int);
			State = 79;
			Match(Comma);
			}
			{
			State = 81;
			Match(Float);
			State = 82;
			Match(Comma);
			}
			{
			State = 84;
			Match(Float);
			State = 85;
			Match(Comma);
			}
			{
			State = 87;
			Match(Word);
			State = 88;
			Match(Comma);
			}
			{
			State = 90;
			Match(Float);
			State = 91;
			Match(Comma);
			}
			{
			State = 93;
			Match(Float);
			State = 94;
			Match(Comma);
			}
			{
			State = 96;
			Match(Int);
			State = 97;
			Match(Comma);
			}
			{
			State = 99;
			Match(Word);
			State = 100;
			Match(Comma);
			}
			{
			State = 102;
			Match(Word);
			}
			State = 105;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Comma) {
				{
				State = 103;
				Match(Comma);
				State = 104;
				Match(Float);
				}
			}

			State = 107;
			Match(RParen);
			State = 109;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LBrack) {
				{
				State = 108;
				subEvents();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventArcTapContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LParen() { return GetToken(ArcaeaAffChartParser.LParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RParen() { return GetToken(ArcaeaAffChartParser.RParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Int() { return GetToken(ArcaeaAffChartParser.Int, 0); }
		public EventArcTapContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eventArcTap; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.EnterEventArcTap(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.ExitEventArcTap(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcaeaAffChartVisitor<TResult> typedVisitor = visitor as IArcaeaAffChartVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEventArcTap(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EventArcTapContext eventArcTap() {
		EventArcTapContext _localctx = new EventArcTapContext(Context, State);
		EnterRule(_localctx, 10, RULE_eventArcTap);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			Match(T__3);
			State = 112;
			Match(LParen);
			{
			State = 113;
			Match(Int);
			}
			State = 114;
			Match(RParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventCameraContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LParen() { return GetToken(ArcaeaAffChartParser.LParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RParen() { return GetToken(ArcaeaAffChartParser.RParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Int() { return GetTokens(ArcaeaAffChartParser.Int); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Int(int i) {
			return GetToken(ArcaeaAffChartParser.Int, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(ArcaeaAffChartParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(ArcaeaAffChartParser.Comma, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Float() { return GetTokens(ArcaeaAffChartParser.Float); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Float(int i) {
			return GetToken(ArcaeaAffChartParser.Float, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Word() { return GetToken(ArcaeaAffChartParser.Word, 0); }
		public EventCameraContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eventCamera; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.EnterEventCamera(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.ExitEventCamera(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcaeaAffChartVisitor<TResult> typedVisitor = visitor as IArcaeaAffChartVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEventCamera(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EventCameraContext eventCamera() {
		EventCameraContext _localctx = new EventCameraContext(Context, State);
		EnterRule(_localctx, 12, RULE_eventCamera);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
			Match(T__4);
			State = 117;
			Match(LParen);
			{
			State = 118;
			Match(Int);
			State = 119;
			Match(Comma);
			}
			{
			State = 121;
			Match(Float);
			State = 122;
			Match(Comma);
			}
			{
			State = 124;
			Match(Float);
			State = 125;
			Match(Comma);
			}
			{
			State = 127;
			Match(Float);
			State = 128;
			Match(Comma);
			}
			{
			State = 130;
			Match(Float);
			State = 131;
			Match(Comma);
			}
			{
			State = 133;
			Match(Float);
			State = 134;
			Match(Comma);
			}
			{
			State = 136;
			Match(Float);
			State = 137;
			Match(Comma);
			}
			{
			State = 139;
			Match(Word);
			State = 140;
			Match(Comma);
			}
			{
			State = 142;
			Match(Int);
			}
			State = 143;
			Match(RParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventScenecontrolContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LParen() { return GetToken(ArcaeaAffChartParser.LParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RParen() { return GetToken(ArcaeaAffChartParser.RParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Int() { return GetTokens(ArcaeaAffChartParser.Int); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Int(int i) {
			return GetToken(ArcaeaAffChartParser.Int, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(ArcaeaAffChartParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(ArcaeaAffChartParser.Comma, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Word() { return GetToken(ArcaeaAffChartParser.Word, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Float() { return GetToken(ArcaeaAffChartParser.Float, 0); }
		public EventScenecontrolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eventScenecontrol; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.EnterEventScenecontrol(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcaeaAffChartListener typedListener = listener as IArcaeaAffChartListener;
			if (typedListener != null) typedListener.ExitEventScenecontrol(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcaeaAffChartVisitor<TResult> typedVisitor = visitor as IArcaeaAffChartVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEventScenecontrol(this);
			else return visitor.VisitChildren(this);
		}
	}
